# json-rpc-util

./: .gitmodules  README.md  listen  proxy  vson  vtss-json-spec-diff
client-library-proof-of-concept/: CMakeLists.txt  README.md  example-raw-json.cxx  example-vtss-client-lib.cxx  vtss-json-rpc-example.spec  vtss-json-spec-autogen
